--- a/react-dashboard/public/index.html
+++ b/react-dashboard/public/index.html
@@ -28,6 +28,15 @@
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://dapi.kakao.com http://*.daumcdn.net; script-src 'self' 'unsafe-inline' https://dapi.kakao.com http://*.daumcdn.net; img-src 'self' 'unsafe-inline' https://dapi.kakao.com http://*.daumcdn.net;">
   
     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?autoload=false&appkey=5824c6e33d49a063790c607abe299380"></script>
+
+    <script type="text/javascript">
+    kakao.maps.load(function() {
+        // v3가 모두 로드된 후, 이 콜백 함수가 실행됩니다.
+        var map = new kakao.maps.Map(node, options);
+    });
+    </script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5824c6e33d49a063790c607abe299380&libraries=services"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
